Fixed dark mode icon issues

--- a/public/styles.css
+++ b/public/styles.css
@@ -59,7 +59,7 @@ body {
 #darkModeToggle {
   position: fixed;
   top: 20px;
-  right: 150px;
+  right: 105px;
   padding: 10px;
   /* background-color: #007bff; */
   color: #121212;
